starter/assets/css/style.css
/* The CSS elements have been ordered following the structure of the HTML file. Within these sections, related properties have been clustered based on recommendations from https://github.com/necolas/idiomatic-css. The order of properties is: 
1. Positioning
2. Display & Box Model
3. Typography 
If a selector has multiple properties, the above order has been commented. If the selector's properties fall within the same category or includes one styling element, no comment has been added*/


/* Universal CSS styling*/
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* General styling */
body {
  line-height: 1.6;
  letter-spacing: 0.1em;
  background-color: #e9e5dc;
}

/* Links styling */
a {
  margin: 5px;
  text-decoration: none;
  cursor: pointer;

}

a:hover {
  background-color: #be9b7b;
}


/* 
**********************************
Navigation bar and header section
**********************************
*/

h1 {
  padding: 20px;
  background-color: #be9b7b;
  font-size: 50px;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

.navBar {
  display: flex;
  justify-content: space-between;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
}

ul {
  display: inline-flex;
  font-size: 20px;
}

li {
  margin: 50px 50px;
  display: inline-flex;
  cursor: pointer;
}

/* 
****************************
Banner section 
****************************
*/

.hero-image {
  position: relative;
  background-position: 0px 0px;
  height: 700px;
  background-image: url("/starter/assets/images/hero-banner.JPG");
  background-repeat: no-repeat;
  background-size: cover;
  border-bottom: 3px solid black;
}

#bio-image {
  object-fit: contain;
  width: 800px;
  margin-left: auto;
  margin-bottom: auto;
  display: block;
  position: absolute;
  bottom: 0;
  right: 0;
}

/* 
****************************
Main section 
****************************
*/

/* Section heading styling */
.aboutMe h3,
.work h3,
.contact h3 {
  padding-right: 15px;
  text-align: right;
  width: 200px;
  font-size: 50px;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

.aboutMe,
.work,
.contact {
  padding: 20px;
  display: flex;
  justify-content: flex-start;
}

/* About me paragraph styling*/
.about-paragraph {
  padding-left: 15px;
  margin-left: 5px;
  font-size: 20px;
  clear: none;
}

.about-paragraph {
  border-left: 3px solid black;
}

/* Work Container grid styling */

#categoryGrid {
  padding: 10px;
  border-left: 3px solid black;
  display: grid;
  grid-template-rows: 300px 300px 300px;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "code-refactor code-refactor"
    "project2  project3"
    "project4 project5";
  flex-grow: 1;
}

#code-refactor {
  grid-area: code-refactor;
  background-image: url("../images/code-refactor.PNG");
  border: 3px solid #be9b7b;
}

#refactor-img {
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  margin: auto;
  display: block;
}

#project2 {
  grid-area: project2;
  background-image: url("../images/ocean.PNG");
  border: 3px solid #be9b7b;
}

#project3 {
  grid-area: project3;
  background-image: url("../images/sunset-in-tenerife.PNG");
  border: 3px solid #be9b7b;
}

#project4 {
  grid-area: project4;
  background-image: url("../images/ocean2.JPG");
  border: 3px solid #be9b7b;
}

#project5 {
  grid-area: project5;
  background-image: url("../images/sunset.PNG");
  border: 3px solid #be9b7b;
}

.categoryGridArea {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  margin: 5px;
  display: grid;
  align-content: end;
  cursor: pointer;
}

.heading {
  background-color: rgba(0, 0, 0, 0.7);
  padding: 5px;
  border: 3px solid #be9b7b;
  color: white;
  font-size: 25px;
}

/* Reducing opacity when hovering */
#code-refactor:hover,
#project2:hover,
#project3:hover,
#project4:hover,
#project5:hover {
  opacity: 0.5;
}

/* 
****************************
Contact section 
****************************
*/

.contact-links {
  border-left: 3px solid black;
  padding: 60px;
  font-size: 20px;
}

/* 
****************************
Footer section 
****************************
*/

footer {
  text-align: center;
}

footer p {
  font-size: 15px;
}

/* 
**************************************************
Media Queries for small and medium screen size
**************************************************
*/
@media only screen and (min-width: 0px) and (max-width: 768px) {
  header {
    display: inline;
  }

  h1 {
    display: inline-block;
    width: 100%;
  }

  .navBar {
    text-align: center;
    display: inline-block;
  }

  .navBar ul {
    text-align: center;
  }

  .navBar li {
    margin-top: 5px;
    margin-bottom: 5px;
  }

  h1 {
    font-size: 50px;
  }

  .hero-image {
    display: inline-block;
    width: 100%;
  }

  .about-paragraph {
    font-size: 15px;
  }

  .aboutMe,
  .work,
  .contact {
    flex-direction: column;
    display: inline;
    width: 100%;
  }

  .about-paragraph {
    border: none;
    display: inline-block;
    width: 100%;
    margin-left: 30px;
  }

  #categoryGrid {
    border: none;
    justify-content: center;
    margin-left:70px;
    grid-template-columns: 100vw;
    grid-template-rows: repeat(5, 125px);
    grid-template-areas:
      "code-refactor "
      "project2 "
      "project3 "
      "project4 "
      "project5 ";
  }

  .aboutMe h3,
  .work h3,
  .contact h3 {
    border-bottom: 3px solid black;
    text-align: center;
    display: inline-block;
    width: 100%;
  }

  br {
    display: none;
  }

  .contact-links {
    border: none;
    flex-direction: column;
    display: inline-block;
    width: 100%;
    text-align: center;
    margin-left: 40px;
  }

  footer p {
    width: 100%;
    text-align: center;
    margin-left: 40px;
  }
}

@media only screen and (min-width: 769px) and (max-width: 1024px) {
  header {
    display: inline;
  }

  h1 {
    display: inline-block;
    width: 100%;
  }

  .navBar {
    text-align: center;
    display: inline-block;
  }

  .navBar ul {
    text-align: center;
  }

  .navBar li {
    margin-top: 5px;
    margin-bottom: 5px;
  }

  h1 {
    font-size: 50px;
  }

  .hero-image {
    display: inline-block;
    width: 100%;
  }

  .about-paragraph {
    font-size: 15px;
  }

  .aboutMe,
  .work,
  .contact {
    flex-direction: column;
    display: inline;
    width: 100%;
  }

  .about-paragraph {
    border: none;
    display: inline-block;
    width: 100%;
    margin-left: 30px;
  }

  #categoryGrid {
    border: none;
    display: -ms-inline-grid;
    width: 100%;
    margin-left: 40px;
  }

  .aboutMe h3,
  .work h3,
  .contact h3 {
    border-bottom: 3px solid black;
    text-align: center;
    display: inline-block;
    width: 100%;
  }

  br {
    display: none;
  }

  .contact-links {
    border: none;
    flex-direction: column;
    display: inline-block;
    width: 100%;
    text-align: center;
    margin-left: 40px;
  }

  footer p {
    width: 100%;
    text-align: center;
    margin-left: 40px;
  }
}

